--- a/index.html
+++ b/index.html
@@ -64,6 +64,62 @@
             <img src="./img/firstmen.png" alt="firstmen">
         </div>
     </section>
+    <section class="container subscribe">
+        <div>
+            <img src="./img/secondmen.png" alt="second men">
+        </div>
+        <div>
+            <h2 class="subscribe__title">Subscription index</h2>
+            <form>
+                <input class="input" type="emeil" placeholder="Email">
+                <button class="button button__violet">
+                    Try
+                </button>
+            </form>
+        </div>
+    </section>
+    <section class="container plan">
+        <h2 class="plan__title">Get the right plan for future</h2>
+        <div class="plan__flex">
+            <div class="item">
+                <p class="item__text">Starter</p>
+                <h3 class="item__title">
+                    Free
+                </h3>
+                <ul>
+                    <li class="item__li">1 Website</li>
+                    <li class="item__li">5 GB Hosting</li>
+                    <li class="item__li">Limited Support</li>
+                </ul>
+                <button class="button button__item">Get Started</button>
+            </div>
+            <div class="item">
+                <p class="item__text">Premium</p>
+                <h3 class="item__title">
+                    $29 <span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item__li">10 Website</li>
+                    <li class="item__li">15 GB Hosting</li>
+                    <li class="item__li">Premium Support</li>
+                </ul>
+                <button class="button button__item">Get Started</button>
+            </div>
+            <div class="item">
+                <p class="item__text">Enterprise</p>
+                <h3 class="item__title">
+                    $49 <span>/month</span>
+                </h3>
+                <ul>
+                    <li class="item__li">Unlimited Website</li>
+                    <li class="item__li">50 GB Hosting</li>
+                    <li class="item__li">Premium Support</li>
+                </ul>
+                <button class="button button__item">Get Started</button>
+            </div>
+        </div>
+        
+    </section>
     <footer class="footer">
     <div class="container footer__flex">
         <div>
